--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a:hover {
 h1 {
 color: ;
 font-family: ;
-font-size: ;
+font-size: 35 ;
 margin: ; 
   }
 h2 {
@@ -70,7 +70,7 @@ font-size:
 p1 {
 color: ;
 font-family: ;
-font-size: 
+font-size: 18
 
 }
   ul {
@@ -253,45 +253,18 @@ function set_scroll() {
 </script>
 	<body>
 		<center>
-      <br>
-<img src="https://web.archive.org/web/20091027032639im_/http://es.geocities.com/mk_musicteam/imatges/web/cd6.gif" alt="">
-       <h1>
-        pj martin brown
-      </h1>    
- <a href="https://abezuo.github.io/bio/">bio</a>
       <br><br>
+ <a href="https://abezuo.github.io/site/ "> <img src="https://web.archive.org/web/20091027005800/http://ca.geocities.com/email4me@rogers.com/home.gif" alt="spinning yellow house" height="50"></a>
+      <br>
+       <h1>
+        bio
+      </h1>   
       <img src="https://web.archive.org/web/20091027005105im_/http://hk.geocities.com/cr_wong/image/rainbow_divider.gif" alt="rainbow divider">
       <br> <br>
-      <br> <br> 
-      <a href="https://abezuo.github.io/petproj/"> <img src="6E54FB05-4F38-4B9E-BAF4-69D6629BFB19.JPEG" alt="s" height="250"></a> 
       <br><br>
     <p1>
-     pet project
+     chicago based music person. primarily interested in compositions that accompany film/games.
       </p1>
-      <br>
-      <p2>
-        2022
-      </p2>
-      <br> <br> 
-      <a href="https://abezuo.github.io/airob/ "> <img src="https://boredhumans.b-cdn.net/art/4403.jpg" alt="s" height="250"></a> 
-      <br><br>
-    <p1>
-     AIROBOT
-      </p1>
-      <br>
-      <p2>
-        2022
-      </p2><br> <br> 
-      <a href="https://abezuo.github.io/cont/"> <img src="image0-min.jpeg" alt="s" height="250"></a> 
-      <br><br>
-    <p1>
-     things continue to happen
-      </p1>
-      <br>
-      <p2>
-        2021
-      </p2>
-      <br><br><br>
     </center>
 	</body>
 </html>
