--- a/index.html
+++ b/index.html
@@ -264,6 +264,29 @@ function set_scroll() {
       <br><br>
     <p1>
      chicago based music person. primarily interested in compositions that accompany film/games.
+      <br><br>
+      this site serves as my portfolio in collecting all of my work in one place.
+      </p1>
+      <h2>
+        contact -
+      </h2>
+      <p3> down for collaborations. happy to talk about creating sound for a <br> project of yours or to work together on a piece.</p3>
+      <br>
+      <p1><i>abezuo@gmail.com</i></p1>
+      <br><br>
+      <h2>
+        gear -
+      </h2>
+      <p3>for those interested</p3>
+      <br><br>
+      <p1>
+      <b>DAW:</b> Logic Pro X
+        <br>
+      <b>MIDI controllers:</b> Alesis Vortex Wireless 2, Cme Xkey
+        <br>
+        <b>free VSTs & synths i reccommend:</b> 
+<a href="https://tytel.org/helm/">Helm</a> by Matt Tytel, <a href="https://theproaudiofiles.com/11-free-soft-synth-plugins-for-your-collection/">TyrellN6</a> by u-he  
+
       </p1>
     </center>
 	</body>
